Cleaned some indentation.

--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-    
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-  <head>
+	<head>
 
-    <meta charset="UTF-8">
-  
-    <title>Mogul JS</title>
-  
-    <script src="http://mogulmvc.alanjames1987.com/framework/lib/js/3rdparty/jquery.js?120808"></script>
-    <script src="bin/script.js"></script>
+		<meta charset="UTF-8">
 
-  </head>
+		<title>Mogul JS</title>
 
-  <body>
+		<script src="http://mogulmvc.alanjames1987.com/framework/lib/js/3rdparty/jquery.js?120808"></script>
+		<script src="bin/script.js"></script>
 
-    <script>
-    </script>
+	</head>
 
-  </body>
+	<body>
+
+		<script></script>
+
+	</body>
 
 </html>
