--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 
 		<title>Mogul JS</title>
 
-		<script src="http://mogulmvc.alanjames1987.com/framework/lib/js/3rdparty/jquery.js?120808"></script>
-		<script src="bin/script.js"></script>
+		<link href="../Mogul CSS/bin/style.css" type="text/css" rel="stylesheet" />
+
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+		<script src="bin/script.js?120922"></script>
 
 	</head>
 
 	<body>
+
+		<form action="/action_button_upload_action" target="button_upload_frame_left" method="post" enctype="multipart/form-data">
+			<input type="hidden" name="data"/>
+			<input type="file" name="file" onchange="upload()"/>
+			<input type="reset" />
+		</form>
 
 		<script>
 
