--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+The purpose of this file is to test the compiled JS files.
+-->
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -9,46 +13,17 @@
 
 		<title>Mogul JS</title>
 
-		<link href="http://mogulmvc.com/framework/lib/css/core/MStyle.css?1360576605" type="text/css" rel="stylesheet" />
-
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 		<script src="bin/MScript.js"></script>
 
 	</head>
 
 	<body>
 
-		<br />
-
-		<input type="text" id="state" placeholder="State" />
-
-		<p id="valid"></p>
-
 	</body>
 
 	<script>
-		$('#state').keyup(function() {
-			
-			$('#valid').show();
-			
-			var state = $('#state').val();
 
-			if (MValidate.state(state)) {
-				$('#valid').html("It's Valid").css({
-					'color' : '#0a0a0a'
-				}).removeClass('MTextBold');
-
-			} else {
-				$('#valid').html("It's Not Valid").css({
-					'color' : '#960000'
-				}).addClass('MTextBold');
-			}
-
-			if (state == "") {
-				$('#valid').hide();
-			}
-
-		});
 	</script>
 
 </html>
