--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ The purpose of this file is to test the compiled JS files.
 		<meta charset="UTF-8">
 
 		<title>Mogul JS</title>
+		
+		<link href="http://mogulmvc.com/component/mogul-css/bin/MStyle.css?1389252574" type="text/css" rel="stylesheet" />
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 		<script src="bin/MScript.js"></script>
