Moves the test folder.

--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,7 @@ The purpose of this file is to test the compiled JS files.
 		<link href="http://mogulmvc.com/component/mogul-css/bin/MStyle.css?1389252574" type="text/css" rel="stylesheet" />
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-		<script src="bin/MScript.js"></script>
+		<script src="../bin/MScript.js"></script>
 
 	</head>
 
